--- a/src/assets/scss/custom.scss
+++ b/src/assets/scss/custom.scss
@@ -110,54 +110,58 @@ svg {
    5.0 - Header
    ========================================================================== */
 
-$height-variables: 62px;
+$height-top-header: 62px;
+$width-container: 85%;
+.col-full {
+    width: $width-container;
+    max-width: $width-container;
+    margin: auto;
+    border-right: 1px solid;
+    border-left: 1px solid;
+}
+
+.icon-wrap {
+    margin-right: 10px;
+}
+
+
+/* BUTTON COMMON STYLE */
+
+a.btn {
+    background: $white !important;
+    border-radius: 100px !important;
+    padding: 5px 25px !important;
+    /* &:hover {
+        -webkit-box-shadow: 5px 10px 14px -1px #666666;
+        box-shadow: 5px 10px 14px -1px #666666;
+    } */
+}
+
 
 /* 5.1 - Top-Header */
 
 #site-header {
+    height: 100vh;
+    width: 100vw;
+    background-color: $white;
+    position: relative;
     #top-header {
+        height: $height-top-header;
         width: 100%;
-        height: $height-variables;
-        background-color: rgba(0, 0, 0, 0.7);
+        background-color: rgba(0, 0, 0, 0.6);
+        position: fixed;
         display: flex;
-        align-items: center;
         .menu-top-header {
-            margin: 0px 5%;
             display: flex;
-            align-items: center;
             justify-content: space-between;
-            width: 100%;
-            .left-menu {
+            color: $white;
+            &>div {
+                gap: 20px;
+            }
+            & * {
                 display: flex;
                 align-items: center;
-                .menu-item {
-                    color: $white;
-                    display: flex;
-                    align-items: center;
-                    margin: 0px 20px;
-                    .icon-wrap {
-                        width: 37px;
-                        height: 37px;
-                        aspect-ratio: 1/1;
-                        background-color: rgba(0, 0, 0, 0.8);
-                        border-radius: 8%;
-                        margin-right: 10px;
-                    }
-                }
-            }
-            .right-menu {
-                .btn-contattaci-top-header {
-                    background: #fff;
-                    padding: 5px 15px;
-                    border-radius: 9rem;
-                }
             }
         }
     }
-    /* /#top-header */
-    #main-header {
-        height: calc( 100vh - $height-variables);
-        background-color: red;
-    }
-    /* /#main-header */
 }
