--- a/src/assets/scss/custom.scss
+++ b/src/assets/scss/custom.scss
@@ -26,6 +26,8 @@
    1.0  Variables
    ========================================================================== */
 
+$white: #fff;
+$black: #000;
 body {
     background-color: #ffffff;
     font-family: "Lato", sans-serif;
@@ -42,11 +44,28 @@ body * {
     list-style: none;
 }
 
+html::-webkit-scrollbar {
+    display: none;
+    scrollbar-width: none;
+}
+
+ul,
+ol {
+    margin: 0!important;
+    padding: 0!important;
+}
+
+body a {
+    text-decoration: none;
+    color: $black;
+    &:hover {
+        color: $black;
+    }
+}
+
 
 /* COLORS */
 
-$white: #fff;
-$black: #000;
 h1,
 h2,
 h3,
@@ -105,6 +124,10 @@ svg {
     max-height: 35px;
 }
 
+.row {
+    margin: 0px!important;
+}
+
 
 /* ==========================================================================
    3.0  Fonts
@@ -147,7 +170,7 @@ a.btn {
 /* 5.1 - Top-Header */
 
 #site-header {
-    height: 100vh;
+    height: 90vh;
     width: 100vw;
     background-color: $white;
     position: relative;
@@ -173,12 +196,25 @@ a.btn {
     }
     #main-header {
         position: relative;
-        height: 100%;
-        width: 100%;
-        .vinile-wrap {
-            position: absolute;
-            right: -45%;
-            transform: translateX(-50%);
+        height: 90vh;
+        width: 100vw;
+        background-color: $white;
+        &>.row {
+            height: 100%;
+            width: 100%;
+            overflow: hidden;
+        }
+        #header-menu {
+            margin: $height-top-header auto;
+        }
+        .vinile-wrap-container {
+            position: relative;
+            .vinile-wrap {
+                position: absolute;
+                right: -25%;
+                top: 50%;
+                transform: translateY(-50%);
+            }
         }
     }
 }
