Rimosse le linee guida del container

--- a/src/assets/scss/custom.scss
+++ b/src/assets/scss/custom.scss
@@ -145,8 +145,8 @@ $width-container: 85%;
     width: $width-container;
     max-width: $width-container;
     margin: auto;
-    border-right: 1px solid;
-    border-left: 1px solid;
+    /*     border-right: 1px solid;
+    border-left: 1px solid; */
 }
 
 .icon-wrap {
