--- a/src/assets/scss/custom.scss
+++ b/src/assets/scss/custom.scss
@@ -26,12 +26,22 @@
    1.0  Variables
    ========================================================================== */
 
+
+/* https://fontsgeek.com/fonts/Minion-Pro-Cond-Italic */
+
 $white: #fff;
 $black: #000;
 @mixin gradientTopHeader() {
     background: rgb(0, 0, 0);
     background: linear-gradient(90deg, rgba(0, 0, 0, 1) 0%, rgba(25, 25, 25, 1) 50%);
 }
+
+
+/* @font-face {
+    font-family: 'MinionPro';
+    src: url(../fonts/MinionPro-Regular.otf);
+    font-weight: 200;
+} */
 
 body {
     background-color: #ffffff;
@@ -227,7 +237,7 @@ a.btn {
             height: 100vh;
             .row {
                 height: 100%;
-                .col-md-5 {}
+                /* .col-md-5 {} */
                 .col-md-7 {
                     height: 100%;
                     background-color: red;
