changed size footer

--- a/src/assets/scss/custom.scss
+++ b/src/assets/scss/custom.scss
@@ -471,8 +471,9 @@ $width-container: 85%;
 
 #site-footer {
     background-color: $black;
-    height: 400px;
+    height: 250px;
     position: relative;
+    margin-top: 128px;
     #back-top {
         position: absolute;
         top: 0%;
