--- a/src/assets/scss/custom.scss
+++ b/src/assets/scss/custom.scss
@@ -429,7 +429,7 @@ $width-container: 85%;
                 }
                 .nome {
                     font-size: 102px;
-                    margin-top: -102px;
+                    margin-top: -62px;
                 }
             }
         }
@@ -531,3 +531,149 @@ $width-container: 85%;
         }
     }
 }
+
+
+/* XXX-Large devices (large desktops, less than 1800px) */
+
+
+/* @media (max-width: 1799.98px) {} */
+
+
+/* XX-Large devices (large desktops, less than 1600px) */
+
+@media (max-width: 1599.98px) {
+    #site-header {
+        #main-header {
+            .vinile-wrap-container {
+                .vinile-wrap {
+                    right: -25%;
+                }
+            }
+        }
+    }
+}
+
+
+/* X-Large devices (large desktops, less than 1400px) */
+
+@media (max-width: 1399.98px) {
+    #site-header {
+        #main-header {
+            .vinile-wrap-container {
+                .vinile-wrap {
+                    right: -35%;
+                    .servizi-wrap {
+                        #servizio-01,
+                        #servizio-02 {
+                            left: -60%;
+                        }
+                    }
+                    .controlli-wrap {
+                        left: 15%;
+                    }
+                }
+            }
+        }
+    }
+    /* /#site-header */
+    #site-main {
+        #chi-siamo {
+            .container-fluid {
+                .row {
+                    .col-md-6 {
+                        .col-full {
+                            .container-sx-wrap {
+                                .content-text {
+                                    .chi-siamo-link {
+                                        font-size: 95px !important;
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+
+/* Large devices (desktops, less than 1200px) */
+
+@media (max-width: 1199.98px) {
+    p {
+        font-size: 16px!important;
+    }
+    #site-header {
+        #top-header {
+            .col-full {
+                .menu-top-header {
+                    .left-menu {
+                        .menu-item {
+                            font-size: 14px;
+                        }
+                    }
+                }
+            }
+        }
+        /* /#top-header */
+        #main-header {
+            .vinile-wrap-container {
+                .vinile-wrap {
+                    .servizi-wrap {
+                        scale: .8;
+                        #servizio-01,
+                        #servizio-02 {
+                            left: -58%;
+                        }
+                    }
+                }
+            }
+        }
+        /* /#main-header */
+    }
+    /* /#site-header */
+    #site-main {
+        #chi-siamo {
+            .container-fluid {
+                .row {
+                    .col-md-6 {
+                        .col-full {
+                            .container-sx-wrap {
+                                .content-text {
+                                    .chi-siamo-link {
+                                        font-size: 85px !important;
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+
+/* Medium devices (tablets, less than 992px) */
+
+
+/* @media (max-width: 991.98px) {} */
+
+
+/* Small devices (landscape phones, less than 768px) */
+
+
+/* @media (max-width: 768.98px) {} */
+
+
+/* Small applies to x-small devices (portrait phones, less than 576px) */
+
+
+/* @media (max-width: 575.98px) {} */
+
+
+/* Small applies to x-small devices (portrait phones, less than 321px) */
+
+
+/* @media (max-width: 320.98px) {} */
